...

                <co.smartreceipts.android.widget.ui.TextInputAutoCompleteTextView
                    android:id="@+id/DIALOG_RECEIPTMENU_NAME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/DIALOG_RECEIPTMENU_PRICE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:hint="@string/DIALOG_RECEIPTMENU_HINT_TAX"
                app:layout_constraintBottom_toBottomOf="@id/receipt_input_price_wrapper"
                app:layout_constraintEnd_toStartOf="@id/DIALOG_RECEIPTMENU_CURRENCY"
                app:layout_constraintStart_toEndOf="@id/receipt_input_price_wrapper"
                app:layout_constraintTop_toTopOf="@id/receipt_input_price_wrapper">
...
                android:contentDescription="@string/DIALOG_RECEIPTMENU_HINT_EXCHANGE_RATE"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/receipt_input_exchange_rate"
                app:layout_constraintEnd_toStartOf="@id/receipt_input_exchange_rate"
                app:layout_constraintStart_toStartOf="parent"
...

            <EditText
                android:id="@+id/receipt_input_exchanged_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                style="@style/Widget.SmartReceipts.GuideImage"
                android:contentDescription="@string/DIALOG_RECEIPTMENU_HINT_DATE"
                app:layout_constraintBottom_toBottomOf="@+id/DIALOG_RECEIPTMENU_DATE"
                app:layout_constraintEnd_toStartOf="@+id/DIALOG_RECEIPTMENU_DATE"
                app:layout_constraintStart_toStartOf="parent"
...
                style="@style/Widget.SmartReceipts.GuideImage"
                android:contentDescription="@string/DIALOG_RECEIPTMENU_HINT_CATEGORY"
                app:layout_constraintBottom_toBottomOf="@+id/DIALOG_RECEIPTMENU_CATEGORY"
                app:layout_constraintEnd_toStartOf="@+id/DIALOG_RECEIPTMENU_CATEGORY"
                app:layout_constraintStart_toStartOf="parent"
...
                style="@style/Widget.SmartReceipts.GuideImage"
                android:contentDescription="@string/DIALOG_RECEIPTMENU_HINT_COMMENT"
                app:layout_constraintBottom_toBottomOf="@+id/DIALOG_RECEIPTMENU_COMMENT"
                app:layout_constraintEnd_toStartOf="@+id/DIALOG_RECEIPTMENU_COMMENT"
                app:layout_constraintStart_toStartOf="parent"
...
                style="@style/Widget.SmartReceipts.GuideImage"
                android:contentDescription="@string/payment_method"
                app:layout_constraintBottom_toBottomOf="@+id/receipt_input_payment_method"
                app:layout_constraintEnd_toStartOf="@+id/receipt_input_payment_method"
                app:layout_constraintStart_toStartOf="parent"
...

            <CheckBox
                android:id="@+id/DIALOG_RECEIPTMENU_EXPENSABLE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/DIALOG_RECEIPTMENU_FULLPAGE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
