...
    <string name="report_attached">1 report attached</string>
    <string name="reports_attached">%s reports attached</string>
    <string name="receipt">Receipt</string>
    <string name="save">Save</string>
    <string name="signature">Signature</string>
    <string name="send_file">Get File&#8230;</string>
    <string name="send_email">Send File&#8230;</string>
    <string name="support">%s - Support</string>
    <string name="total">Total</string>
    <string name="total_item">Total: %s</string>
    <string name="text">Text</string>
    <string name="type">Type</string>
    <string name="undefined">Undefined</string>
...
    <string name="distance_no_data">You don\'t seem to have any distance tracked yet. Try clicking the "+" (plus) button up top to get started.</string>
    <string name="distance_insert_failed">Error: Failed to create this distance item. Please make sure your phone is not mounted to your computer.</string>
    <string name="distance_update_failed">Error: Failed to update this distance item. Please make sure your phone is not mounted to your computer.</string>
    <string name="distance_delete_failed">Error: Failed to delete this distance item. Please make sure your phone is not mounted to your computer.</string>

    <!-- ================= Trip Actions =================== -->
    <string name="trip_action_new">New Report</string>

    <!-- ================= Receipt Actions =================== -->
    <string name="receipt_action_camera">Picture</string>
    <string name="receipt_action_gallery">Gallery</string>
    <string name="receipt_action_text">Text-Only</string>
    <string name="receipt_action_import">Import</string>
    <string name="receipt_action_send">Generate</string>
    <string name="receipt_action_distance">Distance</string>

    <!-- ==================== Cards ========================= -->
    <string name="card_overflow_contentDescription">Receipt Options</string>
    <string name="card_thumbnail_contentDescription">Receipt Thumbnail</string>

...
